# hass-foldingathomecontrol

./: .codecov.yml  .codespell  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE  README.md  hacs.json  info.md  mypy.ini  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml  settings.yml
.github/workflows/: automerge.yaml  ci.yaml  ci.yml  hacs.yaml
custom_components/: __init__.py
custom_components/foldingathomecontrol/: __init__.py  button.py  config_flow.py  const.py  foldingathomecontrol_client.py  foldingathomecontrol_device.py  manifest.json  select.py  sensor.py  services.py  services.yaml  timeparse.py
custom_components/foldingathomecontrol/.translations/: en.json
custom_components/foldingathomecontrol/translations/: de.json  en.json  nb.json  pl.json  pt.json
tests/: __init__.py  conftest.py  const.py  test_button.py  test_config_flow.py  test_init.py  test_select.py  test_sensor.py  test_services.py
