[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hass-foldingathomecontrol"
version = "2.3.3"
description = "Homeassistant Custom Component to integrate with Folding@Home"
license = "MIT"
authors = ["Kevin Stillhammer <kevin.stillhammer@gmail.com>"]
readme = "README.md"
repository = "http://github.com/eifinger/hass-foldingathomecontrol"
keywords = [
    "aiohttp",
    "asyncio",
    "foldingathome",
    "folding-at-home"
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.9"
PyFoldingAtHomeControl = "^2.2.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
blacken-docs = "^1.13.0"
coverage = {version = "^6.2", extras = ["toml"]}
bandit = "^1.7.2"
codecov = "^2.1.12"
codespell = "^2.2.2"
darglint = "^1.8.1"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^23.2.13"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.10.1"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.4.0"
flake8-markdown = "^0.3.0"
flake8-simplify = "^0.19.3"
mypy = "^1.0"
pre-commit = "^3.0.4"
pre-commit-hooks = "^4.3.0"
pytest = "^7.1.1"
pytest-asyncio = "^0.20.2"
pytest-cov = "^3.0.0"
pytest-homeassistant-custom-component = "^0.12.29"
pytest-mock = "^3.10.0"
pylint = "^2.16.2"
pyupgrade = "^3.3.1"
safety = "^2.3.5"
vulture = "^2.7"
yamllint = "^1.29.0"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov=custom_components tests"

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.vulture]
min_confidence = 80
paths = ["custom_components", "tests"]

[tool.semantic_release]
version_source = "tag"
version_toml = "pyproject.toml:tool.poetry.version"
version_pattern = "custom_components/foldingathomecontrol/manifest.json:\"version\": \"{version}\""
version_variable = "custom_components/foldingathomecontrol/const.py:VERSION"
build_command = false
upload_to_repository = false
upload_to_release = false
branch = "main"
