[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hass-foldingathomecontrol"
version = "2.3.3"
description = "Homeassistant Custom Component to integrate with Folding@Home"
license = "MIT"
authors = ["Kevin Stillhammer <kevin.stillhammer@gmail.com>"]
readme = "README.md"
repository = "http://github.com/eifinger/hass-foldingathomecontrol"
keywords = [
    "aiohttp",
    "asyncio",
    "foldingathome",
    "folding-at-home"
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.10"
PyFoldingAtHomeControl = "^3.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
blacken-docs = "^1.13.0"
codespell = "^2.2.4"
mypy = "^1.1.1"
pre-commit = "^3.1.1"
pre-commit-hooks = "^4.4.0"
vulture = "^2.7"
yamllint = "^1.29.0"
ruff = "^0.0.255"
pytest-homeassistant-custom-component = "^0.13.25"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov=custom_components tests"

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.ruff]
ignore = ['E501']
line-length = 88
select = [
    'B',
    'B9',
    'C',
    'E',
    'F',
    'W',
]
fix = true

[tool.ruff.mccabe]
max-complexity = 12

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.vulture]
min_confidence = 80
paths = ["custom_components", "tests"]

[tool.semantic_release]
version_source = "tag"
commit_version_number = true
version_toml = "pyproject.toml:tool.poetry.version"
version_pattern = "custom_components/foldingathomecontrol/manifest.json:\"version\": \"{version}\""
version_variable = "custom_components/foldingathomecontrol/const.py:VERSION"
build_command = false
upload_to_repository = false
upload_to_release = false
branch = "main"
