[project]
name = "hass-foldingathomecontrol"
version = "1.0+versionplaceholder.1"
description = "Homeassistant Custom Component to integrate with Folding@Home"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Kevin Stillhammer", email = "kevin.stillhammer@gmail.com" }
]
repository = "http://github.com/eifinger/hass-foldingathomecontrol"
keywords = [
    "aiohttp",
    "asyncio",
    "foldingathome",
    "folding-at-home"
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
managed = true
dev-dependencies = [
    "PyFoldingAtHomeControl>=3.0.1",
    "black>=23.7.0",
    "blacken-docs>=1.14.0",
    "codespell>=2.2.5",
    "mypy>=1.4.1",
    "pre-commit>=3.3.3",
    "yamllint>=1.32.0",
    "ruff>=0.0.281",
    "pytest-homeassistant-custom-component>=0.13.51",
    "pre-commit-hooks>=4.4.0",
    "respx>=0.20.1",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --asyncio-mode=auto --cov=custom_components tests"

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.ruff]
target-version = "py311"
ignore = [
    "D107",  # Missing docstring in __init__
    "D202",  # No blank lines allowed after function docstring
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "D404",  # First word of the docstring should not be This
    "D406",  # Section name should end with a newline
    "D407",  # Section name underlining
    "D411",  # Missing blank line before section
    "E501",  # line too long
    "E731",  # do not assign a lambda expression, use a def
]
line-length = 120
select = [
    "B007", # Loop control variable {name} not used within loop body
    "B014", # Exception handler with duplicate exception
    "C",  # complexity
    "D",  # docstrings
    "E",  # pycodestyle
    "F",  # pyflakes/autoflake
    "ICN001", # import concentions; {name} should be imported as {asname}
    "PGH004",  # Use specific rule codes when using noqa
    "PLC0414", # Useless import alias. Import alias does not rename original package.
    "SIM105", # Use contextlib.suppress({exception}) instead of try-except-pass
    "SIM117", # Merge with-statements that use the same scope
    "SIM118", # Use {key} in {dict} instead of {key} in {dict}.keys()
    "SIM201", # Use {left} != {right} instead of not {left} == {right}
    "SIM212", # Use {a} if {a} else {b} instead of {b} if not {a} else {a}
    "SIM300", # Yoda conditions. Use 'age == 42' instead of '42 == age'.
    "SIM401", # Use get from dict with default instead of an if block
    "T20",  # flake8-print
    "TRY004", # Prefer TypeError exception for invalid type
    "RUF006", # Store a reference to the return value of asyncio.create_task
    "UP",  # pyupgrade
    "W",  # pycodestyle
]
fix = true

[tool.ruff.mccabe]
max-complexity = 12

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.semantic_release]
version_source = "tag"
commit_version_number = true
version_toml = "pyproject.toml:tool.poetry.version"
version_pattern = "custom_components/foldingathomecontrol/manifest.json:\"version\": \"{version}\""
version_variable = "custom_components/foldingathomecontrol/const.py:VERSION"
build_command = false
upload_to_repository = false
upload_to_release = false
branch = "main"
